--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -25,15 +25,15 @@
         </ul>
         <p><b>Steps:</b></p>
         <p>
-            <ol>In a large bowl, whisk together the sugars, salt, and butter until a paste forms with no lumps.</ol>
-            <ol>Whisk in the egg and vanilla, beating until light ribbons fall off the whisk and remain for a short while before falling back into the mixture.</ol>
-            <ol>Sift in the flour and baking soda, then fold the mixture with a spatula (Be careful not to overmix, which would cause the gluten in the flour to toughen resulting in cakier cookies).</ol>
-            <ol>Fold in the chocolate chunks, then chill the dough for at least 30 minutes. For a more intense toffee-like flavor and deeper color, chill the dough overnight. The longer the dough rests, the more complex its flavor will be.</ol>
-            <ol>Preheat oven to 350°F (180°C). Line a baking sheet with parchment paper.</ol>
-            <ol>Scoop the dough with an ice-cream scoop onto a parchment paper-lined baking sheet, leaving at least 4 inches (10 cm) of space between cookies and 2 inches (5 cm) of space from the edges of the pan so that the cookies can spread evenly.</ol>
-            <ol>Bake for 12-15 minutes, or until the edges have started to barely brown.</ol>
-            <ol>Cool completely before serving.</ol>
-            <ol>Enjoy!</ol>
+            <ol>1. In a large bowl, whisk together the sugars, salt, and butter until a paste forms with no lumps.</ol>
+            <ol>2. Whisk in the egg and vanilla, beating until light ribbons fall off the whisk and remain for a short while before falling back into the mixture.</ol>
+            <ol>3. Sift in the flour and baking soda, then fold the mixture with a spatula (Be careful not to overmix, which would cause the gluten in the flour to toughen resulting in cakier cookies).</ol>
+            <ol>4. Fold in the chocolate chunks, then chill the dough for at least 30 minutes. For a more intense toffee-like flavor and deeper color, chill the dough overnight. The longer the dough rests, the more complex its flavor will be.</ol>
+            <ol>5. Preheat oven to 350°F (180°C). Line a baking sheet with parchment paper.</ol>
+            <ol>6. Scoop the dough with an ice-cream scoop onto a parchment paper-lined baking sheet, leaving at least 4 inches (10 cm) of space between cookies and 2 inches (5 cm) of space from the edges of the pan so that the cookies can spread evenly.</ol>
+            <ol>7. Bake for 12-15 minutes, or until the edges have started to barely brown.</ol>
+            <ol>8. Cool completely before serving.</ol>
+            <ol>9. Enjoy!</ol>
         </p>
 
 </body>
