Fixed image sizing, and added description for image

--- a/recipes/waffle.html
+++ b/recipes/waffle.html
@@ -5,6 +5,6 @@
     <title>Waffles</title>
 </head>
 <body>
-    <img src="./img/waffles.jpg" alt="Delicious waffle">
+    <img src="../img/waffles.jpg" alt="Delicious waffle" height="400" width="400">
 </body>
 </html>
