Added steps, ingredients etc. Overall structure of webpage is exact same as cookies.html as asked for by client.

--- a/recipes/waffle.html
+++ b/recipes/waffle.html
@@ -5,6 +5,30 @@
     <title>Waffles</title>
 </head>
 <body>
+    <h1><b>Waffle Recipe</b></h1>
     <img src="../img/waffles.jpg" alt="Delicious waffle" height="400" width="400">
+    <p><h4><b>Description:</b></h4></p>
+    <p>If you're craving Waffle House waffles try this easy copycat recipe - you won't taste the difference. Serve with maple syrup, butter, and chocolate chips.</p>
+        <p><h4><b>Ingredients:</b></h4></p>
+        <ul>
+            <li>1 1/2 cups flour</li>
+            <li>2 tablespoons cornstarch</li>
+            <li>1 teaspoon salt</li>
+            <li>1/2 teaspoon baking powder</li>
+            <li>1/2 teaspoon baking soda</li>
+            <li>1 large egg</li>
+            <li>1/4 cup sugar</li>
+            <li>1/4 cup salted butter, softened, plus more for serving</li>
+            <li>1 cup half-and-half</li>
+            <li>1/2 cup buttermilk</li>
+            <li>cooking spray</li>
+            <li>pure maple syrup, and/or chocolate chips, for serving</li>
+        </ul>
+        <p><b>Steps:</b></p>
+        <p>
+            <ol>1. Whisk together flour, cornstarch, salt, baking powder, and baking soda in a bowl.</ol>
+            <ol>2. Whisk together egg, sugar, butter, and vanilla in a separate large bowl until mixture is smooth. Whisk in half-and-half and buttermilk. Add flour mixture; stir until just combined and a few lumps remain. (Do not overmix.) Chill, covered, at least 1 hour or up to overnight.</ol>
+            <ol>3. Preheat waffle iron to medium-high; lightly coat with cooking spray. Pour about 2/3 cup batter onto waffle iron. Cook until golden and crisp on edges, 4 to 6 minutes. Transfer to a plate; keep warm. Repeat with remaining batter.</ol>
+            <ol>4. Serve waffles with maple syrup, chocolate chips, and/or additional butter.</ol>
 </body>
 </html>
