Final minor modifications including index homepage Added anchor links to all pages in index page, as well as minor modificaitons to two pages.

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chocolate-Chip-Cookies</title>
+    <title>chocolate-chip-cookies</title>
 </head>
 <body>
     <h1>Chocolate Chip Cookies</h1>
