--- a/recipes/chicken-noodle-soup.html
+++ b/recipes/chicken-noodle-soup.html
@@ -6,6 +6,27 @@
 </head>
 <body> 
 <h1><b>Chicken Noodle Soup</b></h1>
-<img src="./img/waffles.jpg" alt="Delicious waffle">
+<img src="../img/chicken-noodle-soup.jpg" alt="Chicken Noodle Soup" height="400" width="400">
+    <p><h4><b>Description:</b></h4></p>
+    <p>A chicken noodle soup recipe that's a very easy, very good substitute for when you don't have time to make your soup totally from scratch.</p>
+        <p><h4><b>Ingredients:</b></h4></p>
+        <ul>
+            <li>1 tablespoon butter</li>
+            <li>½ cup chopped onion</li>
+            <li>½ cup chopped celery</li>
+            <li>4 (14.5 ounce) cans chicken broth</li>
+            <li>1 (14.5 ounce) can vegetable broth</li>
+            <li>½ pound chopped cooked chicken breast</li>
+            <li>1 ½ cups egg noodles</li>
+            <li>1 cup sliced carrots</li>
+            <li>½ teaspoon dried basil</li>
+            <li>½ teaspoon dried oregano</li>
+            <li>salt and ground black pepper to taste</li>
+        </ul>
+        <p><b>Steps:</b></p>
+        <p>
+            <ol>1. Melt butter in a large pot over medium heat. Add onion and celery and cook until just tender, about 5 minutes.</ol>
+            <ol>2. Add chicken broth, vegetable broth, chicken, egg noodles, carrots, basil, oregano, salt, and pepper. Stir to combine and bring to a boil.</ol>
+            <ol>3. Reduce heat and simmer for 20 minutes.</ol>
 </body>
 </html>
