Made correction in spelling waffle.html is correct spelling instead of waffles.html for anchor link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1><b>Odin Recipes</b></h1>
-    <a href="recipes/cookies.html" target="_blank" rel="noopener noreferrer">Chocolate Chip Cookies</a>
-    <a href="recipes/waffles.html" target="_blank" rel="noopener noreferrer">Waffles</a>
-    <a href="recipes/chicken-noodle-soup.html" target="_blank" rel="noopener noreferrer">Chicken Noodle Soup</a>
+    <p><h4>Description:</h4></p>
+        <p>These are 3 easy recipes you can use in order to cook a variety of delicious meals.</p>
+    <p><a href="recipes/cookies.html" target="_blank" rel="noopener noreferrer">Chocolate Chip Cookies</a></p>
+    <p><a href="recipes/waffle.html" target="_blank" rel="noopener noreferrer">Waffles</a></p>
+    <p><a href="recipes/chicken-noodle-soup.html" target="_blank" rel="noopener noreferrer">Chicken Noodle Soup</a></p>
 </body>
 </html>
