Changes to some inline css will update more later

--- a/recipes/chicken-noodle-soup.html
+++ b/recipes/chicken-noodle-soup.html
@@ -5,7 +5,7 @@
     <title>chicken-noodle-soup</title>
 </head>
 <body> 
-<h1><b>Chicken Noodle Soup</b></h1>
+<h1 font-weight = bold > Chicken Noodle Soup </h1>
 <img src="../img/chicken-noodle-soup.jpg" alt="Chicken Noodle Soup" height="400" width="400">
     <p><h4><b>Description:</b></h4></p>
     <p>A chicken noodle soup recipe that's a very easy, very good substitute for when you don't have time to make your soup totally from scratch.</p>
